yaml/min-cluster-allinone/apollo-min/service-apollo-portal-server.yaml

#---
# 为外部 mysql 服务设置 service
#kind: Service
#apiVersion: v1
#metadata:
#  namespace: apollo-min
#  name: service-mysql-for-portal-server
#  labels:
#    app: service-mysql-for-portal-server
#spec:
#  ports:
#    - protocol: TCP
#      port: 3306
#      targetPort: 3306
#  type: ClusterIP
#  sessionAffinity: None
#---
#kind: Endpoints
#apiVersion: v1
#metadata:
#  namespace: apollo-min
#  name: service-mysql-for-portal-server
#subsets:
#  - addresses:
#      # 更改为你的 mysql addresses, 例如 1.1.1.1
#      - ip: your-mysql-addresses
#    ports:
#      - protocol: TCP
#       port: 3306

---
kind: Service
apiVersion: v1
metadata:
  namespace: apollo-min
  name: service-apollo-portal-server
  labels:
    app: service-apollo-portal-server
spec:
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
      nodePort: 30001
  selector:
    app: pod-apollo-portal-server
  type: NodePort
  # portal session 保持
  sessionAffinity: ClientIP

---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  namespace: apollo-min
  name: deployment-apollo-portal-server
  labels:
    app: deployment-apollo-portal-server
spec:
  # 3 个实例
  #replicas: 3
  replicas: 1
  selector:
    matchLabels:
      app: pod-apollo-portal-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pod-apollo-portal-server
    spec:
      #我只有一天机器
      #nodeSelector:
      #  node: "apollo"
      
      volumes:
        - name: volume-configmap-apollo-portal-server
          configMap:
            name: configmap-apollo-portal-server
            items:
              - key: application-github.properties
                path: application-github.properties
              - key: apollo-env.properties
                path: apollo-env.properties
      
      containers:
        - image: hpy253215039/apollo-portal-server:v1.4.0    # 更改为你的 docker registry 下的 image
          securityContext:
            privileged: true
          imagePullPolicy: IfNotPresent
          name: container-apollo-portal-server
          ports:
            - protocol: TCP
              containerPort: 8070
          
          volumeMounts:
            - name: volume-configmap-apollo-portal-server
              mountPath: /apollo-portal-server/config/application-github.properties
              subPath: application-github.properties
            - name: volume-configmap-apollo-portal-server
              mountPath: /apollo-portal-server/config/apollo-env.properties
              subPath: apollo-env.properties
          
          readinessProbe:
            tcpSocket:
              port: 8070
            initialDelaySeconds: 10
            periodSeconds: 5
          
          livenessProbe:
            tcpSocket:
              port: 8070
            # 120s 内, server 未启动则重启 container
            initialDelaySeconds: 120
            periodSeconds: 15
          
      dnsPolicy: ClusterFirst
      restartPolicy: Always
