yaml/min-cluster-allinone/apollo-min/apollo-configservice-transition-ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pro-apollo-configservice001
  namespace: inc
  labels:
    wayne-app: pro-apollo
    wayne-ns: inc
    app: pro-apollo-configservice001
  #annotations:
  #  kubernetes.io/ingress.class: inc
spec:
  tls: []
  rules:
    - host: dev-apollo-configservice
      http:
        paths:
          - backend:
              serviceName: dev-apollo-configservice
              servicePort: 80
            path: /
